# controller/user.go
@@ -11,7 +11,16 @@ import (
 	"go.uber.org/zap"
 )
 
-// 处理注册请求的函数
+// SignUpHandler 处理注册请求的函数
+// @Summary 注册用户接口
+// @Description 用户注册接口
+// @Tags 用户相关接口
+// @Accept application/json
+// @Produce application/json
+// @Param SignUp body models.ParamSignUp true "注册参数"
+// @Security ApiKeyAuth
+// @Success 200
+// @Router /signUp [post]
 func SignUpHandler(c *gin.Context) {
 	// 1.获取参数和参数校验
 	p := new(models.ParamSignUp)
@@ -24,7 +33,7 @@ func SignUpHandler(c *gin.Context) {
 			ResponseError(c, CodeInvalidParam)
 			return
 		}
-	ResponseErrorWithMsg(c, CodeInvalidParam, removeTopStruct(errs.Translate(trans)))
+		ResponseErrorWithMsg(c, CodeInvalidParam, removeTopStruct(errs.Translate(trans)))
 		return
 	}
 	// 2.业务处理
@@ -40,13 +49,21 @@ func SignUpHandler(c *gin.Context) {
 }
 
 // LoginHandler 登录函数
+// @Summary 登录接口
+// @Description 登录接口
+// @Tags 用户相关接口
+// @Accept application/json
+// @Produce application/json
+// @Param Login body models.ParamLogin true "登录参数"
+// @Success 200
+// @Router /login [post]
 func LoginHandler(c *gin.Context) {
 	// 获取请求参数及参数校验
 	p := new(models.ParamLogin)
 	if err := c.ShouldBindJSON(p); err != nil {
 		// 请求参数有误，直接返回相应
 		zap.L().Error("Login with invalid param", zap.Error(err))
-		errs , ok := err.(validator.ValidationErrors)
+		errs, ok := err.(validator.ValidationErrors)
 		if !ok {
 			ResponseError(c, CodeInvalidParam)
 			return
